--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ main{
     box-shadow: 0px 0px 10px var(--cor6);
     border-bottom-left-radius: 20px;
     border-bottom-right-radius:20px;
+    height: 88,5vh;
 }
 div.video{
     background-color:#BBF443;
